assets/css/layouts/footer.css
footer {
  background-color: var(--background-color-secondary);
}

.footer-inner {
  max-width: var(--page-width-wide);
  margin: 0 auto;
  display: flex;
  flex-wrap: wrap;
  gap: var(--spacing-xxxl);
  align-items: baseline;
  padding: 0 var(--spacing-mmd) 2rem;
}

footer section {
  flex-basis: 100%;
}

@media screen and (min-width: 816px) {
  footer section {
    flex-basis: content;
  }
}

footer section:first-of-type {
  margin-top: var(--spacing-xxl);
  margin-bottom: 0;
}

footer section:last-of-type {
  margin-top: 0;
}

footer p,
footer a {
  font-size: 1rem;
  margin-bottom: 1rem;
}

footer h2 {
  font-size: 1.5rem;
}

footer a[href],
footer a[href]:visited {
  color: var(--color-accent);
  text-decoration: none;
}

footer p a[href],
footer p a[href]:visited {
  text-decoration: underline;
}

footer a[href]:hover {
  color: var(--color-accent-focus);
  text-decoration: underline;
}

footer a[href]:focus-visible {
  box-shadow: var(--focus-style-box-shadow);
  text-decoration: none;
}

ul.meta-links,
ul.social-links {
  flex-wrap: wrap;
}

ul.meta-links {
  --gap: var(--spacing-mmd);
}

ul.social-links {
  display: flex;
  flex-direction: column;
  max-height: 9rem;
  max-width: 20rem;
  /* horizontally aligns first li and p of each footer section */
  margin-top: -4px;
}

@media screen and (min-width: 816px) {
  ul.social-links {
    display: block;
    max-height: 100%;
    max-width: 100%;
  }
}

